[package]
name = "apply"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.124"
serde_json = "1.0"
geo = {version="0.17.1", features=["use-serde"]}
angle = {version="0.4.0"}
pom = "3.2.0"