[package]
name = "apply"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"


[dependencies]
serde = "1.0.124"
serde_json = "1.0"
geo = {version="0.17.1"}
angle = {version="0.4.0"}
geojson = {version="0.22.0", features = ["geo-types"]}
parser = { path = "../parser" }