[package]
name = "mafe"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"


[dependencies]
clap = "2.33.3"
cairo-rs = {version = "0.9.1", default-features = false, features = ["png", "pdf", "svg"]}
piet = "0.4.0"
apply = { path = "../apply" }
parser = { path = "../parser" }
